# Vehicle-Insurance-Domain-MLops

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py  transfrom_random.py
.github/workflows/: azure.yaml
artifact/07_15_2026_00_33_33/data_ingestion/: test.csv
artifact/07_16_2026_16_13_46/data_ingestion/: test.csv
config/: schema.yaml
notebook/: EDA_vehicle_insurance.ipynb  Feature_Engineering_and_Model_Training.ipynb  mongoDB_demo.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/cloud_storage/: azure_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: azure_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: vehicle_data.py
src/entity/: artifact_entity.py  azure_estimator.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: home.html
src/utils/: main_utils.py
